manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanak81-pipejetui-deployment
  labels:
    app: thanak81-pipejetui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanak81-pipejetui
  template:
    metadata:
      labels:
        app: thanak81-pipejetui
    spec:
      containers:
        - name: thanak81-pipejetui-container
          image: pipejet/thanak81-pipejetui:14
          ports:
            - containerPort: 5173
