manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanak81-pipejetui-https-ingress
  namespace: thanak81-pipejetui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thanak81-pipejetui.assessify.org
      secretName: thanak81-pipejetui-secret-tls
  rules:
    - host: thanak81-pipejetui.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanak81-pipejetui-service
                port:
                  number: 8211
